welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: Invalid literal number
    	ados=ados+1e
                  ^countTeen:5: error: ';' expected but something found.
    	ados=ados+1e
                  ^